correction mobile

--- a/src/assets/scss/common/_button.scss
+++ b/src/assets/scss/common/_button.scss
@@ -19,6 +19,9 @@
     z-index: 2;
     width: 10%; height: 30%;
     transition: 0.35s;
+    @include max(992px){
+      display: none;
+    }
   }
 
   &::before {
